<resources>
    <string name="app_name" translatable="false">Money Hater</string>
    <string name="facebook_app_id" translatable="false">210652492815261</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb210652492815261</string>
    <string name="thongbao">Sign in by email</string>
    <string name="email" translatable="false">Email</string>
    <string name="matkhau">Password</string>
    <string name="login">Sign in</string>
    <string name="dangky">Register</string>
    <string name="quenmatkhau">Forget password?</string>
    <string name="tbregister">Register with email</string>
    <string name="tbforgot">Enter the email address you used to register, and we will send you an email to recover your password in no time.</string>
    <string name="submit">Submit</string>
    <string name="themgiaodich">Add transaction</string>
    <string name="tieude">Title</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_greet">Your feedback is very important to us. Lets build a better Money Hater together.</string>
    <string name="about" translatable="false">This is DATAs project. We are Hoang Anh, Tuan Anh, Minh Duc, Van Duc, Duc Thinh. Thanks Mr.Thuan and Mr.Quang for helping us.</string>
    <string name="noidung">Details</string>
    <string name="contact">Contact</string>
    <string name="privacy">Privacy</string>
    <string name="question">Question</string>
    <string name="privacy_title">Your data is absolutely safe!</string>
    <string name="privacy_content">Your data is always safe with us. We will never give your information to anyone. We are using Google Cloud services - the biggest hosting service - which is trusted by thousands of companies and banks.</string>
    <string name="question1">Can I use Money Hater in other devices?</string>
    <string name="answer1">Yes, in case you are registered Money Hater account. You only need to log in other devices to continue use Money Hater. But we only support Android, sorry about that.</string>
    <string name="question2">How to change my email account?</string>
    <string name="answer2">Please contact us by sending an email with your new email to contact@moneyhater.com. We will answer you within 12 hours. Please notice that we can not change your email belong with your account if you log in through Facebook account.</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="close">CLOSE</string>
    <string name="edit">EDIT</string>
    <string name="select_grp">SELECT GROUP</string>
    <string name="create_grp">Create group</string>
    <string name="add_grp">Add group</string>
    <string name="sum">SUM</string>
    <string name="amount">Amount of money</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to Money Hater!</string>
    <string name="slide_1_desc">Amazing android app with cool features!</string>

    <string name="slide_2_title">Amazing Features</string>
    <string name="slide_2_desc">Amazing features and free to use</string>

    <string name="slide_3_title">All in One App</string>
    <string name="slide_3_desc">More than XXX features in one application!</string>

    <string name="slide_4_title" translatable="false">Great Discounts</string>
    <string name="slide_4_desc" translatable="false">Best discounts on every single service we offer!</string>

    <!--<string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>-->
    <!--<string name="play_again">Play Again</string>-->
</resources>