<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.duccao.money_hater.HelpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/help_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/txtquestion"
        android:layout_margin="15dp"
        android:clickable="true"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:text="@string/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtprivacy"
        android:layout_margin="15dp"
        android:clickable="true"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:text="@string/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtcontact"
        android:layout_margin="15dp"
        android:clickable="true"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:text="@string/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
