<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_choose_group"
    tools:context=".ChooseGroupActivity">

    <Button
        android:clickable="true"
        android:id="@+id/btnAddMember2Grp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingRight="10dp"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:text="Add member"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:clickable="true"
        android:paddingTop="14dp"
        android:textStyle="bold"
        android:id="@+id/tv_select"
        android:textColor="@android:color/black"
        android:text="@string/select_grp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:text="@string/close"
        android:textColor="@color/colorPrimary" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn_close"
        android:id="@+id/grp_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:id="@+id/sum_text"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
               android:paddingLeft="60dp"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="Group's name"
                android:id="@+id/tvGroupChosen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </TextView>

            <TextView
                android:paddingLeft="60dp"
                android:textSize="15dp"
                android:text="Bio"
                android:id="@+id/tvBioGroupChosen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </TextView>
        </LinearLayout>

        <ImageView
            android:layout_toLeftOf="@+id/sum_text"
            android:id="@+id/iv_money"
            android:src="@drawable/money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="30dp"
        android:layout_below="@+id/grp_sum"
        android:background="#FFFFFF"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />


    <Button
        android:clickable="true"
        android:layout_below="@+id/recycler_view"
        android:id="@+id/btn_addGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@null"
        android:text="@string/add_grp"
        android:textColor="@color/colorPrimary" />



</RelativeLayout>